<resources>
    <string name="app_name">Rangus</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="user">user</string>
    <string name="senha">senha</string>
    <string name="logar">Logar</string>
    <string name="email">email</string>
    <string name="telefone">telefone</string>
    <string name="confirmar_senha">confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="drawer_item_home">Ínicio</string>
    <string name="drawer_item_profile">Perfil</string>
    <string name="drawer_item_logout">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">nome</string>
</resources>
